<resources>
    <string name="app_name">HydroGUIDE</string>
    <string name="title_home">Home</string>
    <string name="title_procedure">Procedure</string>
    <string name="title_patient_input">Patient Input</string>
    <string name="title_report_summary">Report Summary</string>
    <string name="title_records">Records</string>
    <string name="title_preferences">Profile Settings</string>
    <string name="title_system_update">System Update</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_report_review">Report Review</string>
    <string name="title_report_review_short">Report Rev.</string>
    <string name="measurement_unit_cm">cm</string>
    <string name="measurement_unit_mm">mm</string>
    <string name="close_keyboard_label">Close Keyboard</string>
    <string name="dashboard_clinician_records">User Records</string>
    <string name="dashboard_facility_records">Facility Records</string>
    <string name="dashboard_system_update">System Update</string>
    <string name="dashboard_settings">Settings</string>
    <string name="dashboard_change_password">Change Password</string>
    <string name="dashboard_title">Admin Dashboard</string>
    <string name="dashboard_exit_message">Are you sure you want to exit?</string>
    <string name="dashboard_action_argument_call_source">callSource</string>
    <string name="close">Close</string>
    <string name="button_generate">Generate</string>
    <string name="password_copied">Password copied to clipboard</string>
    <string name="pref_screen_title">User Preferences</string>
    <string name="pref_audio_settings_title">Audio: </string>
    <string name="pref_audio_settings_on">On</string>
    <string name="pref_audio_settings_off">Off</string>
    <string name="pref_inserter_name_title">Inserter: </string>
    <string name="pref_facility_name_title">Facility Name</string>
    <string name="pref_facility_once_manual_option">Always Use Same Facility</string>
    <string name="pref_facility_dropdown_option">Use Dropdown List</string>
    <string name="pref_facility_manual_each_option">Enter Manually for Each Procedure</string>
    <string name="pref_facility_list_title">Facility: </string>
    <string name="pref_data_entry_title">Data Entry Fields Displayed: </string>
    <string name="pref_capture_title">Labeling for Waveform Captures</string>
    <string name="pref_capture_label_exposed_option">Exposed Length</string>
    <string name="pref_capture_label_inserted_option">Inserted Length</string>
    <string name="pref_remove_profile_label">Remove Profile</string>
    <string name="pref_save_profile_label">Save Profile</string>
    <string name="pref_action_warning_text">Are you sure you want to proceed?</string>
    <string name="pref_action_warning_yes">Yes</string>
    <string name="pref_action_warning_no">No</string>
    <string name="records_sync_status_label">Sync Status</string>
    <string name="img_desc_preview_report">Preview report based on current settings.</string>
    <string name="img_desc_facility_fav_icon">Icon representing favorite or default facility for input form.</string>
    <string name="img_desc_profile_fav_icon">Icon representing favorite or default userProfile.</string>
    <string name="img_desc_capture_select_icon">Represents the type of capture and its numeric identifier in the report.</string>
    <string name="facility_select_all">Select All</string>
    <string name="facility_add">Add</string>
    <string name="facility_remove">Remove</string>
    <string name="facility_edit">Edit</string>
    <string name="facility_favorite">Favorite</string>
    <string name="facility_descending_alphabetical">A to Z</string>
    <string name="facility_ascending_alphabetical">Z to A </string>
    <string name="facility_recent">Recent</string>
    <string name="title_add_facility">Add Facility:</string>
    <string name="title_edit_facility">Edit Facility:</string>
    <string name="facility_dropdown_new_facility">Add New Facility</string>
    <string name="patient_name_input_label">Patient Name:</string>
    <string name="patient_name_input_value">John Dodge</string>
    <string name="patient_id_input_label">Patient ID / MRN:</string>
    <string name="patient_id_input_value">123456789</string>
    <string name="patient_dob_input_label">Patient DOB:</string>
    <string name="patient_dob_input_value">01/01/1960</string>
    <string name="patient_gender_input_label">Gender:</string>
    <string name="patient_insert_reason_input_label">Reason for Insertion:</string>
    <string name="patient_insert_reason_input_value">Antibiotics</string>
    <string name="patient_arm_circum_input_label">Arm Circumference:</string>
    <string name="patient_arm_circum_input_label_nl">Arm \n Circumference:</string>
    <string name="patient_arm_circum_input_value">-</string>
    <string name="patient_facility_input_label">Facility:</string>
    <string name="patient_insert_vein_input_label">Insertion Vein:</string>
    <string name="patient_insert_vein_input_value">Left Basilic</string>
    <string name="patient_cath_trim_length_input_label">Trimmed Length:</string>
    <string name="patient_cath_trim_length_input_value">45</string>
    <string name="patient_cath_ext_length_input_label">External Length:</string>
    <string name="patient_cath_ext_length_input_value">-</string>
    <string name="patient_inserter_input_label">Inserter:</string>
    <string name="patient_inserter_input_value">Maya Yearns, RN</string>
    <string name="patient_insert_side_input_label">Patient Side:</string>
    <string name="patient_vein_size_input_label">Vein Size:</string>
    <string name="patient_no_of_lumens_input_label">No. of Lumens:</string>
    <string name="patient_catheter_size_input_label">Catheter Size:</string>
    <string name="patient_notes_input_label">Notes:</string>
    <string name="patient_input_advance_message">Advance to procedure screen before donning sterile gloves.</string>
    <string name="facility_warning_label">Facility must be selected before proceeding and cannot be changed for this procedure.</string>
    <string name="patient_info_label">Patient / ID:</string>
    <string name="patient_info_value">John Dodge 123456789</string>
    <string name="heartbeat_value">63</string>
    <string name="trim_length_label">Trim Length:</string>
    <string name="interc_space_value">7.0cm</string>
    <string name="controller_battery_label">Controller Battery:</string>
    <string name="controller_battery_level">90%</string>
    <string name="tablet_battery_label">Tablet Battery:</string>
    <string name="external_value">0.80mV</string>
    <string name="capture_instruction">Press Button To Capture</string>
    <string name="last_capture_legend_label">Last Capture</string>
    <string name="last_capture_legend_value">2.00mV</string>
    <string name="current_label">Current</string>
    <string name="current_value">1.75mV</string>
    <string name="max_label">Maximum</string>
    <string name="max_value">2.35mV</string>
    <string name="p_wave_amp_label">P-Wave Change</string>
    <string name="last_capture_label">Last Capture:</string>
    <string name="last_capture_value">12:17:35</string>
    <string name="external_label">External</string>
    <string name="intravascular_label">Intravascular</string>
    <string name="capture_header_label">Inserted Length:</string>
    <string name="capture_header_length">00.0 cm</string>
    <string name="intrav_capture_footer_label">Exposed Length</string>
    <string name="intrav_capture_exposed_length">00.0 cm</string>
    <string name="cont_desc_mute">TODO</string>
    <string name="intrav_capture_number">##</string>
    <string name="intrav_captures_instruction">Capture External Waveform for Baseline \nOR\n Change to Intravascular Waveform View</string>
    <string name="intrav_captures_alt_instruction">Change to Intravascular Waveform View</string>
    <string name="intrav_captures_instruction_intra">Capture Intravascular Waveform</string>
    <string name="capture_dialog_inserted_length_title">Inserted Length</string>
    <string name="capture_dialog_exposed_length_title">Exposed Length</string>
    <string name="trim_length_selection_title">Select Catheter Trim Length</string>
    <string name="prep_report_label">Prep. Report</string>
    <string name="change_volume_label">Volume</string>
    <string name="change_brightness_label">Brightness</string>
    <string name="toggle_mute_label">Mute</string>
    <string name="toggle_waveform_label">Waveform View</string>
    <string name="change_vertical_offset_label">Vertical Offset</string>
    <string name="change_vertical_offset_label_short">Offset</string>
    <string name="change_vertical_scale_label">Amplitude</string>
    <string name="change_plot_speed_label">Speed</string>
    <string name="cycle_mock_label">Cycle Mock</string>
    <string name="capture_label">Capture</string>
    <string name="volume_value">60</string>
    <string name="time_scale_mode_manual_label">Manual</string>
    <string name="time_scale_mode_auto_once_label">Auto Once</string>
    <string name="time_scale_mode_auto_cont_label">Auto Continuous</string>
    <string name="time_scale_value">5 sec</string>
    <string name="cont_desc_horiz_scale">Adjust window of time being represented by waveform graphs and also change the live graph\’s swipe speed.</string>
    <string name="cont_desc_vert_scale">Adjust vertical scale or range of waveform graphs.</string>
    <string name="cont_desc_vert_offset">Adjust vertical offset of waveform graphs.</string>
    <string name="cont_desc_brightness">Adjust brightness of the screen.</string>
    <string name="cont_desc_help">Toggle helpful tooltips on the UI.</string>
    <string name="cont_desc_volume">Adjust the device\’s audio volume.</string>
    <string name="cont_desc_capture">Save a snippet of the live waveform graph for the procedure report.</string>
    <string name="cont_desc_volume_change">Adjust the slider to desired audio volume.</string>
    <string name="cont_desc_brightness_change">Adjust the slider to desired screen brightness.</string>
    <string name="cont_desc_timescale_change">Adjust the slider to desired swipe speed of the live graph.</string>
    <string name="cont_desc_start_procedure">Begin the procedure using this patient data.</string>
    <string name="cont_desc_finish_report">End the procedure and save its report data.</string>
    <string name="records_name_label">Patient Name</string>
    <string name="records_id_label">Patient ID#</string>
    <string name="records_dob_label">D.O.B</string>
    <string name="records_date_label">Date</string>
    <string name="records_done_by_label">Procedure Done By</string>
    <string name="records_facility_label">Facility</string>
    <string name="select_catheter_size">Select Catheter Size:</string>
    <string name="table_header_clinician_name">User Name</string>
    <string name="table_header_clinician_email">Email Address</string>
    <string name="table_header_user_type">User Type</string>
    <string name="table_header_facility_name">Facility Name</string>
    <string name="button_ok_label">OK</string>
    <string name="set_numbers_of_lumens">Set Numbers of Lumens</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="_1_9_french">1.9 French</string>
    <string name="_2_6_french">2.6 French</string>
    <string name="_3_french">3 French</string>
    <string name="_4_french">4 French</string>
    <string name="_5_french">5 French</string>
    <string name="_6_french">6 French</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="create_a_4_6_digit_pin_for_quick_login">Create a 4-6 digit PIN for quick login</string>
    <string name="show_hide_pin">Show/Hide PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="re_enter_pin">Re-enter PIN</string>
</resources>